# Deepguard

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  test_pipeline.js
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  _codex_ci.sh  alembic.ini  debug_task.py  pyproject.toml  ruff.toml  sqlite_test.py  test_pipeline.py  write_ci.js
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_expand_model_version_length.py
backend/app/: __init__.py  config.py  csrf.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  gradcam.py  history.py  results.py  system.py  verify.py
backend/app/services/: analyzers.py  benchmark_runner.py  job_store.py  model_status.py  news_ingestion.py  rate_limiter.py  storage.py  system_registry.py  usage_logger.py  verification.py
backend/app/tasks/: audio_tasks.py  celery_app.py  image_tasks.py  news_tasks.py  video_tasks.py
backend/scripts/: run_benchmark_suite.py
backend/tests/: conftest.py  test_auth_and_history.py  test_image_analysis.py  test_system_registry.py
docs/: ai-implementation-brief.md  benchmark-suite.json  dataset-registry.json  ml-assets-and-datasets.md  model-registry.json
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/scripts/: browser-smoke.mjs
ml_models/: README.md  dataset_downloader.py  download_pretrained_models.py
ml_models/audio_detector/: README.md  __init__.py  inference.py  model.py  train.py  utils.py
ml_models/deepfake_detector/: README.md  __init__.py  inference.py  model.py  preprocessing.py  train.py  utils.py
ml_models/fake_news_detector/: README.md  __init__.py  inference.py  (+3 more)
(+30 files in other folders)
